2011-08-18  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/util.jl: added move-window-to-corner and
	move-window-to-edge helpers

2011-07-09  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/actions.jl: fixed calling tile-windows

2011-07-08  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: also exclude ignored windows from
	tiling. added window-never-tile-p

	* lisp/sawfish/wm/ext/match-window.jl: added never-tile window-matcher

	* man/sawfish.texi: updated EA docs

2011-07-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: make interactive call tile-windows
	work again

2011-06-27  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/conf.jl: define before/after-edge-action-hook
	here

	* lisp/sawfish/wm/edge/actions.jl: improved passing of while-moving
	flag to edge-actions

	* lisp/sawfish/wm/edge/flip.jl: split up code for flip-viewport and
	flip-workspace

	* lisp/sawfish/wm/edge/flip.jl
	* lisp/sawfish/wm/edge/hot-spot.jl
	* lisp/sawfish/wm/edge/tile.jl
	* lisp/sawfish/wm/edge/viewport-drag.jl: call
	before/after-edge-action-hook from the proper places

2011-06-02  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/actions.jl: added before-edge-action-hook and
	after-edge-action-hook. Fixed logic of blocking actions while
	mousetrapping

	* lisp/sawfish/wm/autoload.jl: drop edge-flip-invoke and
	viewport-drag-invoke from list

	* lisp/sawfish/wm/edge/tile.jl: added command definition

2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/actions.jl: don't exec any edge-action, while
	mousetrapping is active (new feature in misc-1.9 branch)

2011-05-28  Jeremy Hankins <nowan@nowan.org>
	* lisp/sawfish/wm/edge/flip.jl
	* lisp/sawfish/wm/edge/hot-spots.jl: EF/HS/HM timers are no
	longer started if a timer is already running; fixes bug where
	flip-viewport would jump multiple viewports.
