@@ -31,6 +31,7 @@
 	  sawfish.wm.custom
 	  sawfish.wm.edge.conf
 	  sawfish.wm.edge.util
+	  sawfish.wm.edge.expand
 	  sawfish.wm.edge.flip
 	  sawfish.wm.edge.hot-spots
 	  sawfish.wm.edge.tile
@@ -51,6 +52,8 @@
        (edge-flip-invoke edge func while-moving))
       ((tile-windows)
        (tile-windows-core edge while-moving))
+      ((expand-window)
+       (expand-action edge))
       ((none/hot-spot)
        (hot-spot-invoke edge))
       ((none/hot-move)
