@@ -45,7 +45,7 @@
   (defcustom left-right-edge-move-action 'none/hot-move
     "Action for the left and right screen-edge while moving a window."
     :group edge-actions
-    :type  (choice none/hot-move viewport-drag flip-workspace flip-viewport tile-windows))
+    :type  (choice none/hot-move viewport-drag flip-workspace flip-viewport tile-windows expand-window))
 
   (defcustom top-bottom-edge-action 'none/hot-spot
     "Action for the top and bottom screen-edge."
@@ -55,7 +55,7 @@
   (defcustom top-bottom-edge-move-action 'none/hot-move
     "Action for the top and bottom screen-edge while moving a window."
     :group edge-actions
-    :type  (choice none/hot-move viewport-drag flip-workspace flip-viewport tile-windows))
+    :type  (choice none/hot-move viewport-drag flip-workspace flip-viewport tile-windows expand-window))
 
   (defcustom edge-flip-delay 250
     "Delay (in milliseconds) of flipping of viewport / workspace."
