@@ -2,6 +2,12 @@
 	* lisp/sawfish/wm/edge/util.jl: added move-window-to-corner and
 	move-window-to-edge helpers
 
+	* lisp/sawfish/wm/edge/actions.jl
+	* lisp/sawfish/wm/edge/conf.jl
+	* lisp/sawfish/wm/edge/expand.jl: added expand-window functionality to
+	EdgeActions. expand-window-half-screen-vertical and
+	expand-window-half-screen-horizontal are the public functions.
+
 2011-07-09  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/actions.jl: fixed calling tile-windows
 
